# noggin

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  TODOS.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
docs/: RUNBOOK.md
examples/: slack-manifest.yaml
integrations/hermes/: SKILL.md
integrations/hermes/brain_plugin/: __init__.py  plugin.yaml
integrations/hermes/noggin_plugin/: __init__.py  plugin.yaml
integrations/openclaw/: SKILL.md
scripts/: install-hermes.sh  install-openclaw.sh  smoke.sh
src/noggin/: __init__.py  brain.py  cli.py  config.py  dashboard.py  errors.py  extractors.py  github.py  graph.py  mcp_server.py  models.py  observability.py  paths.py  providers.py  skills.py  slack.py  store.py  sync.py  workers.py
src/open_brain/: __init__.py  brain.py  cli.py  dashboard.py  errors.py  extractors.py  github.py  mcp_server.py  models.py  observability.py  paths.py  redaction.py  skills.py  slack.py  store.py  sync.py
tests/: fakes.py  test_adapters.py  test_core.py
